--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameMgr.cs" />
     <Compile Include="Assets\Scripts\PlayerMgr.cs" />
+    <Compile Include="Assets\Scripts\Skills\ChoiceSkills.cs" />
+    <Compile Include="Assets\Scripts\Skills\Defensive.cs" />
+    <Compile Include="Assets\Scripts\Skills\Move.cs" />
+    <Compile Include="Assets\Scripts\Skills\Offensive.cs" />
     <Compile Include="Assets\Scripts\SkillsMgr.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/ATH/Desktop/AnT/study/Unity19/swallow-s_advenTure/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
