Lobby, clear scene 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameMgr.cs" />
+    <Compile Include="Assets\Scripts\MoveScene.cs" />
+    <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
     <Compile Include="Assets\Scripts\PlayerMgr.cs" />
+    <Compile Include="Assets\Scripts\SkillHandler.cs" />
     <Compile Include="Assets\Scripts\Skills\ChoiceSkills.cs" />
     <Compile Include="Assets\Scripts\Skills\Defensive.cs" />
     <Compile Include="Assets\Scripts\Skills\Move.cs" />
